--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   api:
-    build: ./app
+    build: ./backend
     container_name: tg_api
     env_file: .env
     ports:
@@ -12,7 +12,7 @@ services:
     restart: unless-stopped
 
   worker:
-    build: ./app
+    build: ./backend
     container_name: tg_worker
     env_file: .env
     command: python -m worker
