--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,6 @@
 services:
   api:
-    build: ./app
+    build: ./backend
     container_name: tg_api
     env_file: .env
     ports:
@@ -10,11 +10,11 @@ services:
       db:
         condition: service_healthy
     volumes:
-      - ./app:/app
+      - ./backend:/app
     restart: unless-stopped
 
   worker:
-    build: ./app
+    build: ./backend
     container_name: tg_worker
     env_file: .env
     command: python -m worker
@@ -22,7 +22,7 @@ services:
       db:
         condition: service_healthy
     volumes:
-      - ./app:/app
+      - ./backend:/app
     restart: unless-stopped
 
   db:
