feat: Implement user authentication system with JWT and password hashing
- Added authentication endpoints for user registration and login
- Integrated JWT for secure token-based authentication
- Implemented password hashing using Bcrypt
- Created migration script to add user authentication to existing database
- Updated project structure to support multi-user functionality
- Enhanced README with setup instructions and API usage examples
- Developed frontend components for login and registration
- Configured Docker for production deployment with health checks
- Added Nginx for API proxying and CORS handling

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ SESSION_SECRET=please-change-me-to-a-secure-random-string
 
 # Worker tick interval in seconds
 WORKER_TICK=30
+
+# Authentication Configuration (CHANGE THESE IN PRODUCTION!)
+JWT_SECRET_KEY=CHANGE-THIS-SUPER-SECRET-JWT-KEY-FOR-PRODUCTION-12345678
+ACCESS_TOKEN_EXPIRE_MINUTES=30
