--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,10 @@ uvicorn[standard]==0.30.0
 jinja2==3.1.4
 sqlalchemy==2.0.31
 psycopg2-binary==2.9.9
-pydantic==2.8.2
+pydantic[email]==2.8.2
 telethon==1.36.0
 python-dateutil==2.9.0.post0
 apscheduler==3.10.4
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart>=0.0.7
