feat: Add interval_seconds to campaign steps for per-step intervals
- Updated schemas to include interval_seconds in CampaignStepCreate and CampaignStepResponse.
- Modified services to handle step-specific intervals when determining message sending delays.
- Enhanced Docker configurations for production and development environments to support new database settings.
- Updated frontend API and components to manage interval_seconds for campaign steps.
- Implemented migration scripts to add interval_seconds column to campaign_steps table and run all migrations robustly.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,8 +5,9 @@ services:
     container_name: tg_migrate
     env_file: .env
     environment:
-      - RUN_MIGRATIONS=true
-    command: python migrate_add_auth.py
+      - DB_HOST=db
+      - DB_PORT=5432
+    command: python migrate_all.py
     depends_on:
       db:
         condition: service_healthy
@@ -27,6 +28,9 @@ services:
     build: ./backend
     container_name: tg_api
     env_file: .env
+    environment:
+      - DB_HOST=db
+      - DB_PORT=5432
     ports:
       - "8000:8000"
     command: python -m uvicorn main:app --host 0.0.0.0 --port 8000
@@ -35,7 +39,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/docs"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -45,6 +49,9 @@ services:
     build: ./backend
     container_name: tg_worker
     env_file: .env
+    environment:
+      - DB_HOST=db
+      - DB_PORT=5432
     command: python -m worker
     depends_on:
       db:
