--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,9 +22,9 @@ RUN chmod +x /entrypoint.sh
 # Expose port
 EXPOSE 8000
 
-# Add healthcheck
+# Add healthcheck (use /docs which doesn't require auth)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/ || exit 1
+    CMD curl -f http://localhost:8000/docs || exit 1
 
 # Use entrypoint
 ENTRYPOINT ["/entrypoint.sh"]
